<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Your local weather</string>
    <string name="enter_city_hint" tools:ignore="MissingTranslation">Enter city</string>
    <string name="label_current_city" tools:ignore="MissingTranslation">Current city</string>
    <string name="label_choose_city" tools:ignore="MissingTranslation">Choose city</string>
    <string name="feedback_email" translatable="false">thuryn1@gmail.com</string>
    <string name="alertDialog_voice_disclaimer_title" tools:ignore="MissingTranslation">Text and guidance translations</string>
    <string name="alertDialog_voice_disclaimer_message" tools:ignore="MissingTranslation">This app has voice guidance by way of text translations and voice commands courtesy of volunteers at https://hosted.weblate.org/projects/your-local-weather. The app dev cannot guarantee they are correct - you accept this by using the app. To use it you need TTS (Text-to-speech) installed and guidance turned on in the settings, where you can set your own voice commands.</string>
    <string name="alertDialog_weather_changed_title" tools:ignore="MissingTranslation">Weather provider changed</string>
    <string name="alertDialog_weather_changed_message" tools:ignore="MissingTranslation">This application uses Open-Meteo (https://open-meteo.com) as its weather source from now on, as openweathermap.org is ending its free service in June 2024.</string>
    <string name="alertDialog_mls_service_title" tools:ignore="MissingTranslation">Mozilla location service limitation</string>
    <string name="alertDialog_mls_service_message" tools:ignore="MissingTranslation">Access to the Mozilla location service expired as of 1.3.2020. The app is forced to use the Andorid system for location coordinates discovery. The address is still resolved by Nominatim. Please consider this when using the app.</string>
    <string name="alertDialog_android_10_permissions_title" tools:ignore="MissingTranslation">Android 10 permission changes</string>
    <string name="alertDialog_android_10_permissions_message" tools:ignore="MissingTranslation">Starting from Android 10, fine-grained access to location is needed to get info about the connected GSM/LTE network. Grant permission to fetch location in the background too (if you want your location all the time).</string>
    <string name="alertDialog_battery_optimization_title" tools:ignore="MissingTranslation">Battery optimization</string>
    <string name="alertDialog_battery_optimization_message" tools:ignore="MissingTranslation">The app will ask you to turn off battery optimization to update location, weather or track location by accelerometer in the background.</string>
    <string name="alertDialog_battery_optimization_proceed" tools:ignore="MissingTranslation">Proceed</string>
    <string name="alertDialog_battery_optimization_cancel" tools:ignore="MissingTranslation">Cancel</string>
    <string name="alertDialog_location_permission_title" tools:ignore="MissingTranslation">Location and Permission Settings</string>
    <string name="alertDialog_background_location_permission_title" tools:ignore="MissingTranslation">Application require background location permission</string>
    <string name="alertDialog_background_location_permission_message" tools:ignore="MissingTranslation">The application requires background location permission to get the weather by location where you actually are. If you agree you should select the option on the next screen:</string>
    <string name="alertDialog_location_permission_message_location_phone_settings" tools:ignore="MissingTranslation">The app is set to update location. Access to it is needed. Go to device settings and switch the location on or switch app location updates off.</string>
    <string name="alertDialog_location_permission_message_location_gps_permission" tools:ignore="MissingTranslation">The app needs permission to update location using GPS.</string>
    <string name="alertDialog_location_permission_message_location_network_permission" tools:ignore="MissingTranslation">The app needs a permission to update location by Wi-Fi and GSM networks.</string>
    <string name="forecast_settings_graph_combined_temperature" tools:ignore="MissingTranslation">Temperature</string>
    <string name="forecast_settings_graph_combined_wind" tools:ignore="MissingTranslation">Wind</string>
    <string name="forecast_settings_graph_combined_rain_snow" tools:ignore="MissingTranslation">Rain/Snow</string>
    <string name="forecast_settings_graph_combined_pressure" tools:ignore="MissingTranslation">Pressure</string>
    <string name="forecast_settings_graph_combined_show_legend" tools:ignore="MissingTranslation">Show legend in graph</string>
    <string name="pref_title_time_style" tools:ignore="MissingTranslation">Time format</string>
    <string name="pref_title_date_style" tools:ignore="MissingTranslation">Date format</string>
    <string name="pref_title_temperature" tools:ignore="MissingTranslation">Temperature</string>
    <string name="pref_title_wind" tools:ignore="MissingTranslation">Wind</string>
    <string name="pref_title_wind_direction" tools:ignore="MissingTranslation">Wind direction style</string>
    <string name="pref_title_rain_snow" tools:ignore="MissingTranslation">Rain and snow</string>
    <string name="pref_title_pressure" tools:ignore="MissingTranslation">Pressure</string>
    <string name="preference_hide_desc" tools:ignore="MissingTranslation">Hide weather description</string>
    <string name="pref_title_category_notification" tools:ignore="MissingTranslation">Notification settings</string>
    <string name="pref_title_notification" tools:ignore="MissingTranslation">Enable Notifications</string>
    <string name="pref_title_notification_refresh_interval" tools:ignore="MissingTranslation">Refresh Interval</string>
    <string name="update_location_gps_enabled" tools:ignore="MissingTranslation">Switch GPS on when necessary</string>
    <string name="pref_title_notification_presence" tools:ignore="MissingTranslation">Notification presence</string>
    <string name="pref_title_notification_visual_style" tools:ignore="MissingTranslation">Visual notification style</string>
    <string name="pref_title_notification_status_icon" tools:ignore="MissingTranslation">Status bar icon style</string>
    <string name="pref_title_vibrate" tools:ignore="MissingTranslation">Vibrate</string>
    <string name="preference_widget_title_update_period" tools:ignore="MissingTranslation">Update period for weather (Location 1,2,3...)</string>
    <string name="preference_widget_title_update_auto_period" tools:ignore="MissingTranslation">Update period for location (Location 0)</string>
    <string name="preference_title_activity_general" tools:ignore="MissingTranslation">General Settings</string>
    <string name="preference_title_activity_widget" tools:ignore="MissingTranslation">Widget Settings</string>
    <string name="preference_title_tts" tools:ignore="MissingTranslation">Guidance settings</string>
    <string name="preference_widget_show_labels" tools:ignore="MissingTranslation">Show labels in widget</string>
    <string name="preference_widget_graphs_native_scale" tools:ignore="MissingTranslation">Show graph in native resolution (when the graph is too small)</string>
    <string name="preference_widget_show_controls" tools:ignore="MissingTranslation">Show settings on widget</string>
    <string name="preference_widget_theme_title" tools:ignore="MissingTranslation">Widget theme</string>
    <string name="preference_title_category_display" tools:ignore="MissingTranslation">Display</string>
    <string name="preference_title_category_location_weather" tools:ignore="MissingTranslation">Update location and weather</string>
    <string name="preference_title_category_units" tools:ignore="MissingTranslation">Unit settings</string>
    <string name="preference_title_power_save" tools:ignore="MissingTranslation">Power save options</string>
    <string name="preference_title_category_system" tools:ignore="MissingTranslation">System settings</string>
    <string name="open_weather_map_api_key" tools:ignore="MissingTranslation">Open-Meteo (https://open-meteo.com) API key</string>
    <string name="pref_title_language" tools:ignore="MissingTranslation">Language</string>
    <string name="location_geocoder_title" tools:ignore="MissingTranslation">Location and Address Source</string>
    <string name="pref_title_theme" tools:ignore="MissingTranslation">Theme</string>
    <string name="preference_display_update_title" tools:ignore="MissingTranslation">Display Update Summary</string>
    <string name="wake_up_strategy_summary" tools:ignore="MissingTranslation">When location gets stuck during device sleep, you can try to wake it up when it is looking for a cellular network</string>
    <string name="wake_up_strategy_title" tools:ignore="MissingTranslation">Wake-Up Strategy</string>
    <string name="clear_cache_button" tools:ignore="MissingTranslation">Clear cache</string>
    <string name="db_info" tools:ignore="MissingTranslation">Information about cache</string>
    <string name="db_header" tools:ignore="MissingTranslation">Address cache database</string>
    <string name="location_cache_lasting_summary" tools:ignore="MissingTranslation">After specified amount of time cached values will be removed</string>
    <string name="location_cache_lasting_title" tools:ignore="MissingTranslation">Age of Cached Values</string>
    <string name="location_cache_enable_label" tools:ignore="MissingTranslation">Cache locations</string>
    <string name="location_cache_enable_on" tools:ignore="MissingTranslation">Found locations are cached</string>
    <string name="location_cache_enable_off" tools:ignore="MissingTranslation">Found locations are not cached</string>
    <string name="preference_title_activity_about" tools:ignore="MissingTranslation">About</string>
    <string name="label_humidity" tools:ignore="MissingTranslation">Humidity</string>
    <string name="label_cloudiness" tools:ignore="MissingTranslation">Cloudiness</string>
    <string name="label_sunrise" tools:ignore="MissingTranslation">Sunrise</string>
    <string name="label_sunset" tools:ignore="MissingTranslation">Sunset</string>
    <string name="label_wind" tools:ignore="MissingTranslation">Wind</string>
    <string name="label_pressure" tools:ignore="MissingTranslation">Pressure</string>
    <string name="label_dew_point" tools:ignore="MissingTranslation">Dew point</string>
    <string name="pref_title_temperature_type" tools:ignore="MissingTranslation">Show temperature as</string>
    <string name="widget_setting_actions_city_label" tools:ignore="MissingTranslation">City label</string>
    <string name="widget_setting_actions_main_icon_label" tools:ignore="MissingTranslation">Current weather icon</string>
    <string name="widget_setting_actions_forecast_label" tools:ignore="MissingTranslation">Weather forecast</string>
    <string name="widget_setting_actions_graph_label" tools:ignore="MissingTranslation">Graph</string>
    <string name="debug_choose_file" tools:ignore="MissingTranslation">Select log folder</string>
    <string name="debug_category_title" tools:ignore="MissingTranslation">Debug Options</string>
    <string name="log_file_lasting_summary" tools:ignore="MissingTranslation">After a specified amount of time the log file will be recreated</string>
    <string name="log_file_lasting_title" tools:ignore="MissingTranslation">Rotation of log file</string>
    <string name="log_to_file_label" tools:ignore="MissingTranslation">Log to file</string>
    <string name="log_to_file_off" tools:ignore="MissingTranslation">Don\'t log to file</string>
    <string name="log_to_file_on" tools:ignore="MissingTranslation">Log to file</string>
    <string name="preference_weather_icon_set_title" tools:ignore="MissingTranslation">Icon Set</string>
</resources>