<?xml version="1.0" encoding="utf-8"?>
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:fragment="org.thosp.yourlocalweather.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/preference_title_activity_general"/>
    <header
        android:fragment="org.thosp.yourlocalweather.SettingsActivity$WidgetPreferenceFragment"
        android:title="@string/preference_title_activity_widget"/>
    <header
        android:fragment="org.thosp.yourlocalweather.SettingsActivity$DebugOptionsPreferenceFragment"
        android:title="@string/debug_category_title"/>
    <header
        android:fragment="org.thosp.yourlocalweather.SettingsActivity$AboutPreferenceFragment"
        android:title="@string/preference_title_activity_about"/>
</preference-headers>