<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="widget_show_controls"
        android:title="@string/preference_widget_show_controls"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="widget_show_labels_pref_key"
        android:title="@string/preference_widget_show_labels"/>
    <ListPreference
        android:defaultValue="dark"
        android:dialogTitle="@string/preference_widget_theme_title"
        android:entries="@array/widget_theme_entries"
        android:entryValues="@array/widget_theme_values"
        android:key="widget_theme_pref_key"
        android:title="@string/preference_widget_theme_title"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="widget_graphs_native_scale"
        android:title="@string/preference_widget_graphs_native_scale"/>
    <ListPreference
        android:defaultValue="preference_display_update_location_source"
        android:dialogTitle="@string/preference_display_update_title"
        android:entries="@array/preference_display_update_entries"
        android:entryValues="@array/preference_display_update_values"
        android:key="widget_update_details_pref_key"
        android:title="@string/preference_display_update_title"/>
</PreferenceScreen>