<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="system"
        android:dialogTitle="@string/pref_title_time_style"
        android:entries="@array/pref_time_style_entries"
        android:entryValues="@array/pref_time_style_values"
        android:key="time_style_pref_key"
        android:title="@string/pref_title_time_style"/>
    <ListPreference
        android:defaultValue="system"
        android:dialogTitle="@string/pref_title_date_style"
        android:entries="@array/pref_date_style_entries"
        android:entryValues="@array/pref_date_style_values"
        android:key="date_style_pref_key"
        android:title="@string/pref_title_date_style"/>
    <ListPreference
        android:defaultValue="celsius"
        android:dialogTitle="@string/pref_title_temperature"
        android:entries="@array/pref_temperature_units_entries"
        android:entryValues="@array/pref_temperature_units_values"
        android:key="temperature_units_pref_key"
        android:title="@string/pref_title_temperature"/>
    <ListPreference
        android:defaultValue="measured_only"
        android:dialogTitle="@string/pref_title_temperature_type"
        android:entries="@array/pref_temperature_type_entries"
        android:entryValues="@array/pref_temperature_type_values"
        android:key="temperature_type_pref_key"
        android:title="@string/pref_title_temperature_type"/>
    <ListPreference
        android:defaultValue="m_per_second"
        android:dialogTitle="@string/pref_title_wind"
        android:entries="@array/pref_wind_units_entries"
        android:entryValues="@array/pref_wind_units_values"
        android:key="wind_units_pref_key"
        android:title="@string/pref_title_wind"/>
    <ListPreference
        android:defaultValue="abbreviation"
        android:dialogTitle="@string/pref_title_wind_direction"
        android:entries="@array/pref_wind_direction_entries"
        android:entryValues="@array/pref_wind_direction_values"
        android:key="wind_direction_pref_key"
        android:title="@string/pref_title_wind_direction"/>
    <ListPreference
        android:defaultValue="mm"
        android:dialogTitle="@string/pref_title_rain_snow"
        android:entries="@array/pref_rain_snow_units_entries"
        android:entryValues="@array/pref_rain_snow_units_values"
        android:key="rain_snow_units_pref_key"
        android:title="@string/pref_title_rain_snow"/>
    <ListPreference
        android:defaultValue="hpa"
        android:dialogTitle="@string/pref_title_pressure"
        android:entries="@array/pref_pressure_units_entries"
        android:entryValues="@array/pref_pressure_units_values"
        android:key="pressure_units_pref_key"
        android:title="@string/pref_title_pressure"/>
</PreferenceScreen>