<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="false"
        android:key="notification_pref_key"
        android:title="@string/pref_title_notification"/>
    <ListPreference
        android:defaultValue="when_updated"
        android:dependency="notification_pref_key"
        android:dialogTitle="@string/pref_title_notification_presence"
        android:entries="@array/notification_presence_entries"
        android:entryValues="@array/notification_presence_values"
        android:key="notification_presence_pref_key"
        android:title="@string/pref_title_notification_presence"/>
    <ListPreference
        android:defaultValue="icon_sun"
        android:dependency="notification_pref_key"
        android:dialogTitle="@string/pref_title_notification_status_icon"
        android:entries="@array/notification_status_icon_entries"
        android:entryValues="@array/notification_status_icon_values"
        android:key="notification_status_icon_pref_key"
        android:title="@string/pref_title_notification_status_icon"/>
    <ListPreference
        android:defaultValue="build_in"
        android:dependency="notification_pref_key"
        android:dialogTitle="@string/pref_title_notification_visual_style"
        android:entries="@array/notification_visual_style_entries"
        android:entryValues="@array/notification_visual_style_values"
        android:key="notification_visual_style_pref_key"
        android:title="@string/pref_title_notification_visual_style"/>
    <ListPreference
        android:defaultValue="60"
        android:dependency="notification_pref_key"
        android:dialogTitle="@string/pref_title_notification_refresh_interval"
        android:entries="@array/notification_refresh_intervals_entries"
        android:entryValues="@array/notification_refresh_interval_values"
        android:key="notification_interval_pref_key"
        android:title="@string/pref_title_notification_refresh_interval"/>
    <SwitchPreference
        android:defaultValue="false"
        android:dependency="notification_pref_key"
        android:key="notification_vibrate_pref_key"
        android:title="@string/pref_title_vibrate"/>
</PreferenceScreen>