<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/widget_setting_weather_details.root_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/windowBackground">

    <Switch
        android:id="@+id/widget_setting_weather_detail.wind_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat"
        android:switchTextAppearance="@style/WidgetOptionSwitch"
        android:text="@string/label_wind"
        android:padding="@dimen/cardview_margin"
        app:showText="true"/>
    <Switch
        android:id="@+id/widget_setting_weather_detail.humidity_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat"
        android:switchTextAppearance="@style/WidgetOptionSwitch"
        android:text="@string/label_humidity"
        android:padding="@dimen/cardview_margin"
        app:showText="true"/>
    <Switch
        android:id="@+id/widget_setting_weather_detail.pressure_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat"
        android:switchTextAppearance="@style/WidgetOptionSwitch"
        android:text="@string/label_pressure"
        android:padding="@dimen/cardview_margin"
        app:showText="true"/>
    <Switch
        android:id="@+id/widget_setting_weather_detail.cloudiness_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat"
        android:switchTextAppearance="@style/WidgetOptionSwitch"
        android:text="@string/label_cloudiness"
        android:padding="@dimen/cardview_margin"
        app:showText="true"/>

    <Switch
        android:id="@+id/widget_setting_weather_detail.dew_point_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat"
        android:switchTextAppearance="@style/WidgetOptionSwitch"
        android:text="@string/label_dew_point"
        android:padding="@dimen/cardview_margin"
        app:showText="true"/>

    <Switch
        android:id="@+id/widget_setting_weather_detail.sunrise_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat"
        android:switchTextAppearance="@style/WidgetOptionSwitch"
        android:text="@string/label_sunrise"
        android:padding="@dimen/cardview_margin"
        app:showText="true"/>

    <Switch
        android:id="@+id/widget_setting_weather_detail.sunset_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat"
        android:switchTextAppearance="@style/WidgetOptionSwitch"
        android:text="@string/label_sunset"
        android:padding="@dimen/cardview_margin"
        app:showText="true"/>
</LinearLayout>
