<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="60"
        android:dialogTitle="@string/preference_widget_title_update_auto_period"
        android:entries="@array/location_auto_update_period_entries"
        android:entryValues="@array/location_auto_update_period_values"
        android:key="location_auto_update_period_pref_key"
        android:title="@string/preference_widget_title_update_auto_period"/>
    <ListPreference
        android:defaultValue="60"
        android:dialogTitle="@string/preference_widget_title_update_period"
        android:entries="@array/location_update_period_entries"
        android:entryValues="@array/location_update_period_values"
        android:key="location_update_period_pref_key"
        android:title="@string/preference_widget_title_update_period"/>
    <ListPreference
        android:defaultValue="location_geocoder_local"
        android:dialogTitle="@string/location_geocoder_title"
        android:entries="@array/location_geocoder_source_entries"
        android:entryValues="@array/location_geocoder_source_values"
        android:key="location_geocoder_source"
        android:title="@string/location_geocoder_title"/>
</PreferenceScreen>