<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_setting_actions.root_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/windowBackground">

    <TextView
        android:id="@+id/widget_setting_actions.city_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat"
        android:text="@string/widget_setting_actions_city_label"
        android:labelFor="@+id/widget_setting_actions.city"/>
    <Spinner
        android:id="@+id/widget_setting_actions.city"
        android:theme="@style/Theme.AppCompat"
        android:layout_width="fill_parent"
        android:padding="@dimen/cardview_margin"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/widget_setting_actions.main_icon_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat"
        android:text="@string/widget_setting_actions_main_icon_label"
        android:labelFor="@+id/widget_setting_actions.main_icon"/>
    <Spinner
        android:id="@+id/widget_setting_actions.main_icon"
        android:theme="@style/Theme.AppCompat"
        android:layout_width="fill_parent"
        android:padding="@dimen/cardview_margin"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/widget_setting_actions.forecast_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat"
        android:text="@string/widget_setting_actions_forecast_label"
        android:labelFor="@+id/widget_setting_actions.forecast"/>
    <Spinner
        android:id="@+id/widget_setting_actions.forecast"
        android:theme="@style/Theme.AppCompat"
        android:layout_width="fill_parent"
        android:padding="@dimen/cardview_margin"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/widget_setting_actions.graph_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.AppCompat"
        android:text="@string/widget_setting_actions_graph_label"
        android:labelFor="@+id/widget_setting_actions.forecast"/>
    <Spinner
        android:id="@+id/widget_setting_actions.graph"
        android:theme="@style/Theme.AppCompat"
        android:layout_width="fill_parent"
        android:padding="@dimen/cardview_margin"
        android:layout_height="wrap_content"/>
</LinearLayout>